+ Añadidas nuevas excepciones relacionadas con la gestión de servicios en SF. + Añadidas las cadenas de texto para las excepciones en el fichero de propiedades.

--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -9,6 +9,16 @@ AGENT_NOT_EXISTS = Not found. The agent ''{0}'' not exists.
 AGENT_NOT_IN_UNIT = Not allowed. The Agent ''{0}'' is not inside the unit ''{1}''.
 
 #
+# Exception message when information is already included in service.
+#
+ALREADY_REGISTERED = All information is already registered in service profile ''{0}''.
+
+#
+# Exeption message when can not connect to DB.
+#
+DB_CONNECTION = Cannot connect to DataBase.
+
+#
 # Exception message when occurs and error trying to delete a value from
 # a table.
 DELETING_TABLE = Deleting value at table ''{0}''.
@@ -44,6 +54,11 @@ INSERTING_TABLE = Inserting new value at table {0}.
 INVALID_ACCESSIBILITY = ''{0}'' is not a valid accesibility value.
 
 #
+# Exception message when data type of input or output is invalid.
+#
+INVALID_DATA_TYPE = Invalid input or output data type.
+
+#
 # Exception message when Position value is incorrect.
 #
 INVALID_POSITION = ''{0}'' is not a valid position value for this Unit type.
@@ -52,6 +67,11 @@ INVALID_POSITION = ''{0}'' is not a valid position value for this Unit type.
 # Exception message when Role Position value is incorrect.
 #
 INVALID_ROLE_POSITION = Invalid. ''{0}'''s position is not a valid value.
+
+#
+# Exception message when service URL is not a valid OWL-S document.
+#
+INVALID_SERVICE_URL = ''{0}'' is not a valid OWL-S document.
 
 #
 # Exception message when Unit Type value is incorrect.
@@ -177,6 +197,16 @@ SAME_AGENT_NAME = Invalid. The TargetAgentName  is the same than AgentName.
 # Exception message when the parent unit is the same than unit.
 #
 SAME_UNIT = Invalid. The Parent Unit is the same than Unit.
+
+#
+# Exception message when the profile of the service is not found in Jena DB.
+#
+SERVICE_PROFILE_NOT_FOUND = ''{0}'' not found in Jena DataBase.
+
+#
+# Exception message when the search of services does not return any value.
+#
+SERVICES_NOT_FOUND = Services not found.
 
 #
 # Exception message when the are subunits inside the unit.
