getServiceProcess changed to take the ServiceURI as Input. Its Jena query has been updated. SERVICE_URI_NOT_FOUND_EXCEPTION added

--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -204,6 +204,11 @@ SAME_UNIT = Invalid. The Parent Unit is the same than Unit.
 SERVICE_PROFILE_NOT_FOUND = ''{0}'' not found in Jena DataBase.
 
 #
+# Exception message when the URI of the service is not found in Jena DB.
+#
+SERVICE_URI_NOT_FOUND = ''{0}'' not found in Jena DataBase.
+
+#
 # Exception message when the search of services does not return any value.
 #
 SERVICES_NOT_FOUND = Services not found.
