--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -51,7 +51,7 @@ INSERTING_TABLE = Inserting new value at table {0}.
 #
 # Exception message when Accessibility value is incorrect.
 #
-INVALID_ACCESSIBILITY = ''{0}'' is not a valid accesibility value.
+INVALID_ACCESSIBILITY = ''{0}'' is not a valid accessibility value.
 
 #
 # Exception message when data type of input or output is invalid.
@@ -66,7 +66,7 @@ INVALID_POSITION = ''{0}'' is not a valid position value for this Unit type.
 #
 # Exception message when Role Position value is incorrect.
 #
-INVALID_ROLE_POSITION = Invalid. ''{0}'''s position is not a valid value.
+INVALID_ROLE_POSITION = Invalid. ''{0}''' position is not a valid value.
 
 #
 # Exception message when service URL is not a valid OWL-S document.
@@ -82,6 +82,12 @@ INVALID_UNIT_TYPE = ''{0}'' is not a valid unitType value.
 # Exception message when Visibility value is incorrect.
 #
 INVALID_VISIBILITY = ''{0}'' is not a valid visibility value.
+
+
+#
+# Exception message when any parameter is empty.
+#
+INVALID_PARAMETERS = Invalid parameters.
 
 #
 # Exception message when occurs a MySQL error.
