Mensajes para las nuevas excepciones.

--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -59,6 +59,29 @@ INVALID_ACCESSIBILITY = ''{0}'' is not a valid accessibility value.
 INVALID_DATA_TYPE = Invalid input or output data type.
 
 #
+# Exception message when Deontic is invalid.
+#
+INVALID_DEONTIC =  Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid Deontic value.
+
+#
+# Exception message when any parameter is empty.
+#
+INVALID_EXPRESSION = Invalid expression at line ''{0}'', column ''{1}''. Encountered: ''{2}''.
+
+
+#
+# Exception message when ID is invalid.
+#
+INVALID_ID =  Invalid expression at line ''{0}'', column ''{1}''.''{2}'' is not a valid ID.
+
+
+#
+# Exception message when Position value is incorrect.
+#
+INVALID_OMS_ACTION = Invalid expression at line ''{0}'', column ''{1}''. ''{2}''is not a valid OMS action, expected: ''{1}''.
+
+
+#
 # Exception message when Position value is incorrect.
 #
 INVALID_POSITION = ''{0}'' is not a valid position value for this Unit type.
@@ -74,6 +97,17 @@ INVALID_ROLE_POSITION = Invalid. ''{0}''' position is not a valid value.
 INVALID_SERVICE_URL = ''{0}'' is not a valid OWL-S document.
 
 #
+# Exception message when Target type value is not a valid.
+#
+INVALID_TARGET_TYPE = Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid target type value.
+
+#
+# Exception message when Target type value is not a valid.
+#
+INVALID_TARGET_VALUE = Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid target value.
+
+
+#
 # Exception message when Unit Type value is incorrect.
 #
 INVALID_UNIT_TYPE = ''{0}'' is not a valid unitType value.
@@ -82,6 +116,8 @@ INVALID_UNIT_TYPE = ''{0}'' is not a valid unitType value.
 # Exception message when Visibility value is incorrect.
 #
 INVALID_VISIBILITY = ''{0}'' is not a valid visibility value.
+
+
 
 
 #
