Mensaje correspondiente a la excepción NotValidIdentifierException

--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -117,9 +117,6 @@ INVALID_UNIT_TYPE = ''{0}'' is not a valid unitType value.
 #
 INVALID_VISIBILITY = ''{0}'' is not a valid visibility value.
 
-
-
-
 #
 # Exception message when any parameter is empty.
 #
@@ -193,6 +190,14 @@ NOT_PLAYS_ROLE = Not allowed. The agent ''{0}'' does not play the role ''{1}''.
 # supervisor or creator in unit.
 #
 NOT_SUPERVISOR_OR_CREATOR_IN_UNIT = Not allowed. The Agent ''{0}'' does not play any role with position supervisor or creator in unit ''{1}''.
+
+
+#
+# Exception message when the identifier is not allowed.
+#
+NOT_VALID_IDENTIFIER= The selected identifier ''{0}'' is not allowed. It uses any reserved word or invalid character.
+
+
 
 #
 # Exception message when the agent is only playing the role creator.
