--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -37,6 +37,12 @@ EXCHANGE_BIND = Exchange bind error: {0}
 # Exception message when occurs an exchange unbind error.
 #
 EXCHANGE_UNBIND = Exchange unbind error: {0}
+
+#
+# Exception message when a norm forbidden the service execution.
+#
+FORBIDDEN_NORM = Exists a norm that forbidden the service execution. 
+
 #
 # Exception message when IDUnitType is not found.
 #
@@ -126,6 +132,12 @@ INVALID_PARAMETERS = Invalid parameters.
 # Exception message when occurs a MySQL error.
 #
 MYSQL = MySQL error: {0}
+
+#
+# Exception message when the norm is already registered in the unit.
+#
+NORM_EXISTS_IN_UNIT = Not allowed. Norm ''{0}'' is already registered in the unit.
+
 
 #
 # Exception message when none of the agents in unit play roles with
