Creadas las pruebas unitarias para el servicio registerNorm. Solventados errores surgidos al pasar al pruebas del servicio registerNorm.

--- a/src/main/resources/THOMASMessages.properties
+++ b/src/main/resources/THOMASMessages.properties
@@ -67,24 +67,24 @@ INVALID_DATA_TYPE = Invalid input or output data type.
 #
 # Exception message when Deontic is invalid.
 #
-INVALID_DEONTIC =  Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid Deontic value.
+INVALID_DEONTIC =  Invalid expression at column ''{0}''. ''{1}'' is not a valid Deontic value.
 
 #
 # Exception message when any parameter is empty.
 #
-INVALID_EXPRESSION = Invalid expression at line ''{0}'', column ''{1}''. Encountered: ''{2}''.
+INVALID_EXPRESSION = Invalid expression at column ''{0}''. Encountered: ''{1}''.
 
 
 #
 # Exception message when ID is invalid.
 #
-INVALID_ID =  Invalid expression at line ''{0}'', column ''{1}''.''{2}'' is not a valid ID.
+INVALID_ID =  Invalid expression at column ''{0}''.''{1}'' is not a valid ID.
 
 
 #
 # Exception message when Position value is incorrect.
 #
-INVALID_OMS_ACTION = Invalid expression at line ''{0}'', column ''{1}''. ''{2}''is not a valid OMS action, expected: ''{1}''.
+INVALID_OMS_ACTION = Invalid expression at column ''{0}''. ''{1}''is not a valid OMS action.
 
 
 #
@@ -105,12 +105,12 @@ INVALID_SERVICE_URL = ''{0}'' is not a valid OWL-S document.
 #
 # Exception message when Target type value is not a valid.
 #
-INVALID_TARGET_TYPE = Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid target type value.
+INVALID_TARGET_TYPE = Invalid expression at column ''{0}''. ''{1}'' is not a valid target type value.
 
 #
 # Exception message when Target type value is not a valid.
 #
-INVALID_TARGET_VALUE = Invalid expression at line ''{0}'', column ''{1}''. ''{2}'' is not a valid target value.
+INVALID_TARGET_VALUE = Invalid expression at column ''{0}''. ''{1}'' is not a valid target value.
 
 
 #
