--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,17 @@
 					<maxmemory>1g</maxmemory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<configuration>
+					<formats>
+						<format>xml</format>
+					</formats>
+				</configuration>
+			</plugin>
+
+			
 		</plugins>
 	</reporting>
 
@@ -130,7 +141,7 @@
 				</configuration>
 
 			</plugin>
-			<plugin>
+			<!--plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
@@ -147,7 +158,7 @@
 				    </formats>  
 					<argLine>-Xms512m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
 				</configuration>
-			</plugin>
+			</plugin-->
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
