solved issue with testSFServices pom

--- a/testSFservices/pom.xml
+++ b/testSFservices/pom.xml
@@ -12,7 +12,7 @@
 		<artifactId>thomas</artifactId>
 		<groupId>es.upv.dsic.gti-ia</groupId>
 		<version>0.3</version>
-		<relativePath>../thomas</relativePath>
+		<relativePath>../../thomas</relativePath>
 	</parent>
 	<build>
 		<finalName>testSFservices</finalName>
