--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 				</configuration>
 
 			</plugin>
-			<!--plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
@@ -153,12 +153,15 @@
 					</dependency>
 				</dependencies>
 				<configuration>
-					<formats>
+				    <formats>
 				    	<format>xml</format>
 				    </formats>  
-					<argLine>-Xms512m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
+				    <argLine>-Xms512M -Xmx2650M -XX:MaxPermSize=4096M</argLine>
+				    <forkMode>always</forkMode>
+				    <threadCount>1</threadCount>
+				    <runOrder>random</runOrder>
 				</configuration>
-			</plugin-->
+			</plugin>
 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -195,7 +198,7 @@
 								<format>html</format>
 								<format>xml</format>
 							</formats>
-							<argLine>-Xms512m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
+							<argLine>-Xms1000m -Xmx2048m -XX:MaxPermSize=4096m</argLine>
 						</configuration>
 					</plugin>
 				</plugins>
