--- a/pom.xml
+++ b/pom.xml
@@ -228,11 +228,11 @@
 			<version>1.5.2</version>
 		</dependency>
 
-		<dependency>
+		<!-- dependency>
 			<groupId>es.upv.dsic.gti-ia</groupId>
 			<artifactId>magentix2</artifactId>
 			<version>2.0</version>
-		</dependency>
+		</dependency-->
 
 
 
