--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			</roles>
 		</contributor>
 	</contributors>
-	<version>2.0</version>
+	<version>2.0.3</version>
 	<description>
 		Though many networking protocol needs have been addressed,
 		a
@@ -320,7 +320,7 @@
 			<version>3.2</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-client-seguridad</artifactId>
 			<version>0.7</version>
@@ -330,7 +330,20 @@
 			<groupId>org.apache</groupId>
 			<artifactId>qpid-common-seguridad</artifactId>
 			<version>0.7</version>
+		</dependency-->
+
+		<dependency>
+			<groupId>org.apache</groupId>
+			<artifactId>qpid-client</artifactId>
+			<version>0.20</version>
+			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache</groupId>
+			<artifactId>qpid-common</artifactId>
+			<version>0.10</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.rampart</groupId>
