--- a/installer/StartMagentix/pom.xml
+++ b/installer/StartMagentix/pom.xml
@@ -25,6 +25,12 @@
 			</plugin>
 			</plugins>
 </build>
+	<repositories>
+		<repository>
+			<id>GTI</id>
+			<url>http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/</url>
+		</repository>
+	</repositories>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -39,7 +45,7 @@
     <dependency>
     	<groupId>es.upv.dsic.gti-ia</groupId>
     	<artifactId>magentix2</artifactId>
-    	<version>2.0</version>
+    	<version>2.0.3</version>
     </dependency>
   </dependencies>
   
