updated make-release. now it extracts the release number from the pom.xml and accepts parameters to avoid some extra generation

--- a/installer/magentix2/configuration/securityUser.properties
+++ b/installer/magentix2/configuration/securityUser.properties
@@ -26,7 +26,7 @@ othersType=PKCS12
 #set the connection protocol to be used to access services 
 protocol=http
 #set the name of the service host
-host=gtiiaprojects
+host=localhost
 #set the port for accessing the services
 port=8080
 #set the base path for accessing to services 
